--- a/store.html
+++ b/store.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <script src="./script.js" defer></script>
+    <script src="script.js" defer></script>
     <link
       href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css"
       rel="stylesheet"
@@ -32,23 +32,15 @@
         <div class="flex flex-wrap -m-4">
           <div class="lg:w-1/4 md:w-1/2 p-4 w-full">
             <div class="block relative h-48 rounded overflow-hidden">
-              <img
-                alt="ecommerce"
-                class="object-cover object-center w-full h-full block"
-                src="https://dummyimage.com/420x260/F00/F00"
-              />
+              <img class="object-cover object-center w-full h-full block" />
             </div>
             <div class="mt-4 flex items-end justify-between">
               <div>
                 <h3
                   class="text-gray-500 text-xs tracking-widest title-font uppercase mb-1"
-                >
-                  Primary Color
-                </h3>
-                <h2 class="text-gray-900 title-font text-lg font-medium">
-                  Red
-                </h2>
-                <p class="mt-1">$16.00</p>
+                ></h3>
+                <h2 class="text-gray-900 title-font text-lg font-medium"></h2>
+                <p class="mt-1"></p>
               </div>
               <button
                 class="text-white py-2 px-4 text-xl bg-blue-500 rounded hover:bg-blue-700"
@@ -59,23 +51,15 @@
           </div>
           <div class="lg:w-1/4 md:w-1/2 p-4 w-full">
             <div class="block relative h-48 rounded overflow-hidden">
-              <img
-                alt="ecommerce"
-                class="object-cover object-center w-full h-full block"
-                src="https://dummyimage.com/420x260/FF0/FF0"
-              />
+              <img class="object-cover object-center w-full h-full block" />
             </div>
             <div class="mt-4 flex items-end justify-between">
               <div>
                 <h3
                   class="text-gray-500 text-xs tracking-widest title-font uppercase mb-1"
-                >
-                  Primary Color
-                </h3>
-                <h2 class="text-gray-900 title-font text-lg font-medium">
-                  Yellow
-                </h2>
-                <p class="mt-1">$21.00</p>
+                ></h3>
+                <h2 class="text-gray-900 title-font text-lg font-medium"></h2>
+                <p class="mt-1"></p>
               </div>
               <button
                 class="text-white py-2 px-4 text-xl bg-blue-500 rounded hover:bg-blue-700"
@@ -86,23 +70,15 @@
           </div>
           <div class="lg:w-1/4 md:w-1/2 p-4 w-full">
             <div class="block relative h-48 rounded overflow-hidden">
-              <img
-                alt="ecommerce"
-                class="object-cover object-center w-full h-full block"
-                src="https://dummyimage.com/420x260/00F/00F"
-              />
+              <img class="object-cover object-center w-full h-full block" />
             </div>
             <div class="mt-4 flex items-end justify-between">
               <div>
                 <h3
                   class="text-gray-500 text-xs tracking-widest title-font uppercase mb-1"
-                >
-                  Primary Color
-                </h3>
-                <h2 class="text-gray-900 title-font text-lg font-medium">
-                  Blue
-                </h2>
-                <p class="mt-1">$12.00</p>
+                ></h3>
+                <h2 class="text-gray-900 title-font text-lg font-medium"></h2>
+                <p class="mt-1"></p>
               </div>
               <button
                 class="text-white py-2 px-4 text-xl bg-blue-500 rounded hover:bg-blue-700"
@@ -113,23 +89,15 @@
           </div>
           <div class="lg:w-1/4 md:w-1/2 p-4 w-full">
             <div class="block relative h-48 rounded overflow-hidden">
-              <img
-                alt="ecommerce"
-                class="object-cover object-center w-full h-full block"
-                src="https://dummyimage.com/420x260/F60/F60"
-              />
+              <img class="object-cover object-center w-full h-full block" />
             </div>
             <div class="mt-4 flex items-end justify-between">
               <div>
                 <h3
                   class="text-gray-500 text-xs tracking-widest title-font uppercase mb-1"
-                >
-                  Secondary Color
-                </h3>
-                <h2 class="text-gray-900 title-font text-lg font-medium">
-                  Orange
-                </h2>
-                <p class="mt-1">$18.00</p>
+                ></h3>
+                <h2 class="text-gray-900 title-font text-lg font-medium"></h2>
+                <p class="mt-1"></p>
               </div>
               <button
                 class="text-white py-2 px-4 text-xl bg-blue-500 rounded hover:bg-blue-700"
@@ -140,23 +108,15 @@
           </div>
           <div class="lg:w-1/4 md:w-1/2 p-4 w-full">
             <div class="block relative h-48 rounded overflow-hidden">
-              <img
-                alt="ecommerce"
-                class="object-cover object-center w-full h-full block"
-                src="https://dummyimage.com/420x260/0F0/0F0"
-              />
+              <img class="object-cover object-center w-full h-full block" />
             </div>
             <div class="mt-4 flex items-end justify-between">
               <div>
                 <h3
                   class="text-gray-500 text-xs tracking-widest title-font uppercase mb-1"
-                >
-                  Secondary Color
-                </h3>
-                <h2 class="text-gray-900 title-font text-lg font-medium">
-                  Green
-                </h2>
-                <p class="mt-1">$16.00</p>
+                ></h3>
+                <h2 class="text-gray-900 title-font text-lg font-medium"></h2>
+                <p class="mt-1"></p>
               </div>
               <button
                 class="text-white py-2 px-4 text-xl bg-blue-500 rounded hover:bg-blue-700"
@@ -167,23 +127,15 @@
           </div>
           <div class="lg:w-1/4 md:w-1/2 p-4 w-full">
             <div class="block relative h-48 rounded overflow-hidden">
-              <img
-                alt="ecommerce"
-                class="object-cover object-center w-full h-full block"
-                src="https://dummyimage.com/420x260/60F/60F"
-              />
+              <img class="object-cover object-center w-full h-full block" />
             </div>
             <div class="mt-4 flex items-end justify-between">
               <div>
                 <h3
                   class="text-gray-500 text-xs tracking-widest title-font uppercase mb-1"
-                >
-                  Secondary Color
-                </h3>
-                <h2 class="text-gray-900 title-font text-lg font-medium">
-                  Purple
-                </h2>
-                <p class="mt-1">$21.00</p>
+                ></h3>
+                <h2 class="text-gray-900 title-font text-lg font-medium"></h2>
+                <p class="mt-1"></p>
               </div>
               <button
                 class="text-white py-2 px-4 text-xl bg-blue-500 rounded hover:bg-blue-700"
@@ -194,23 +146,15 @@
           </div>
           <div class="lg:w-1/4 md:w-1/2 p-4 w-full">
             <div class="block relative h-48 rounded overflow-hidden">
-              <img
-                alt="ecommerce"
-                class="object-cover object-center w-full h-full block"
-                src="https://dummyimage.com/420x260/AAA/AAA"
-              />
+              <img class="object-cover object-center w-full h-full block" />
             </div>
             <div class="mt-4 flex items-end justify-between">
               <div>
                 <h3
                   class="text-gray-500 text-xs tracking-widest title-font uppercase mb-1"
-                >
-                  Grayscale
-                </h3>
-                <h2 class="text-gray-900 title-font text-lg font-medium">
-                  Light Gray
-                </h2>
-                <p class="mt-1">$12.00</p>
+                ></h3>
+                <h2 class="text-gray-900 title-font text-lg font-medium"></h2>
+                <p class="mt-1"></p>
               </div>
               <button
                 class="text-white py-2 px-4 text-xl bg-blue-500 rounded hover:bg-blue-700"
@@ -221,23 +165,15 @@
           </div>
           <div class="lg:w-1/4 md:w-1/2 p-4 w-full">
             <div class="block relative h-48 rounded overflow-hidden">
-              <img
-                alt="ecommerce"
-                class="object-cover object-center w-full h-full block"
-                src="https://dummyimage.com/420x260/333/333"
-              />
+              <img class="object-cover object-center w-full h-full block" />
             </div>
             <div class="mt-4 flex items-end justify-between">
               <div>
                 <h3
                   class="text-gray-500 text-xs tracking-widest title-font uppercase mb-1"
-                >
-                  Grayscale
-                </h3>
-                <h2 class="text-gray-900 title-font text-lg font-medium">
-                  Dark Gray
-                </h2>
-                <p class="mt-1">$18.00</p>
+                ></h3>
+                <h2 class="text-gray-900 title-font text-lg font-medium"></h2>
+                <p class="mt-1"></p>
               </div>
               <button
                 class="text-white py-2 px-4 text-xl bg-blue-500 rounded hover:bg-blue-700"
@@ -329,32 +265,5 @@
         </div>
       </button>
     </section>
-    <template>
-      <div id="" class="lg:w-1/4 md:w-1/2 p-4 w-full">
-        <div class="block relative h-48 rounded overflow-hidden">
-          <img
-            alt="ecommerce"
-            class="object-cover object-center w-full h-full block"
-            src="https://dummyimage.com/420x260/F00/F00"
-          />
-        </div>
-        <div class="mt-4 flex items-end justify-between">
-          <div>
-            <h3
-              class="text-gray-500 text-xs tracking-widest title-font uppercase mb-1"
-            >
-              Primary Color
-            </h3>
-            <h2 class="text-gray-900 title-font text-lg font-medium">Red</h2>
-            <p class="mt-1">$16.00</p>
-          </div>
-          <button
-            class="text-white py-2 px-4 text-xl bg-blue-500 rounded hover:bg-blue-700"
-          >
-            Add To Cart
-          </button>
-        </div>
-      </div></template
-    >
   </body>
 </html>
