--- a/store.html
+++ b/store.html
@@ -33,7 +33,7 @@
       </div>
     </section>
     <section>
-      <div class="mb-4 top-0 right-0 mr-4 mt-20 fixed">
+      <div data-cart-items-wrapper class="mb-4 top-0 right-0 mr-4 mt-20 fixed">
         <div
           style="max-height: calc(100vh - 6rem)"
           class="bg-white text-gray-700 body-font shadow-lg border rounded-lg flex flex-col"
@@ -90,6 +90,7 @@
         </div>
       </div>
       <button
+        data-cart-button
         class="fixed top-0 right-0 mr-4 mt-4 w-12 bg-blue-500 p-2 rounded-full text-white hover:bg-blue-700"
       >
         <svg
