Calculate total in cart

--- a/store.html
+++ b/store.html
@@ -41,7 +41,7 @@
           <div data-cart-items class="overflow-y-auto px-4 pt-4"></div>
           <div class="flex justify-between items-end border-t p-4">
             <span class="font-bold text-lg uppercase">Total</span>
-            <span class="font-bold">$0.00</span>
+            <span data-cart-total class="font-bold"></span>
           </div>
         </div>
       </div>
