Show/hide cart button

--- a/store.html
+++ b/store.html
@@ -32,8 +32,11 @@
         <div data-store-container class="flex flex-wrap -m-4"></div>
       </div>
     </section>
-    <section>
-      <div data-cart-items-wrapper class="mb-4 top-0 right-0 mr-4 mt-20 fixed">
+    <section data-cart class="invisible">
+      <div
+        data-cart-items-wrapper
+        class="mb-4 top-0 right-0 mr-4 mt-20 fixed invisible"
+      >
         <div
           style="max-height: calc(100vh - 6rem)"
           class="bg-white text-gray-700 body-font shadow-lg border rounded-lg flex flex-col"
