Persist cart on all sites

--- a/team.html
+++ b/team.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <script src="./script.js" defer></script>
     <link
       href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css"
       rel="stylesheet"
@@ -193,64 +194,24 @@
         </div>
       </div>
     </section>
-    <section>
-      <div class="mb-4 top-0 right-0 mr-4 mt-20 fixed">
+    <section data-cart class="invisible">
+      <div
+        data-cart-items-wrapper
+        class="mb-4 top-0 right-0 mr-4 mt-20 fixed invisible"
+      >
         <div
           style="max-height: calc(100vh - 6rem)"
           class="bg-white text-gray-700 body-font shadow-lg border rounded-lg flex flex-col"
         >
-          <div class="overflow-y-auto px-4 pt-4">
-            <div class="mb-6">
-              <div class="block relative h-24 rounded overflow-hidden">
-                <img
-                  alt="ecommerce"
-                  class="object-cover object-center w-full h-full block rounded"
-                  src="https://dummyimage.com/210x130/F00/F00"
-                />
-                <button
-                  data-remove-from-cart-button
-                  class="absolute top-0 right-0 bg-black rounded-tr text-white w-6 h-6 text-lg flex justify-center items-center"
-                >
-                  &times;
-                </button>
-              </div>
-              <div class="mt-2 flex justify-between">
-                <div class="flex items-center title-font">
-                  <h2 class="text-gray-900 text-lg font-medium">Red</h2>
-                  <span class="text-gray-600 text-sm font-bold ml-1">x2</span>
-                </div>
-                <div>$32.00</div>
-              </div>
-            </div>
-            <div class="mb-6">
-              <div class="block relative h-24 rounded overflow-hidden">
-                <img
-                  alt="ecommerce"
-                  class="object-cover object-center w-full h-full block rounded"
-                  src="https://dummyimage.com/210x130/00F/00F"
-                />
-                <button
-                  data-remove-from-cart-button
-                  class="absolute top-0 right-0 bg-black rounded-tr text-white w-6 h-6 text-lg flex justify-center items-center"
-                >
-                  &times;
-                </button>
-              </div>
-              <div class="mt-2 flex justify-between">
-                <div class="flex items-center title-font">
-                  <h2 class="text-gray-900 text-lg font-medium">Blue</h2>
-                </div>
-                <div>$12.00</div>
-              </div>
-            </div>
-          </div>
+          <div data-cart-items class="overflow-y-auto px-4 pt-4"></div>
           <div class="flex justify-between items-end border-t p-4">
             <span class="font-bold text-lg uppercase">Total</span>
-            <span class="font-bold">$44.00</span>
+            <span data-cart-total class="font-bold"></span>
           </div>
         </div>
       </div>
       <button
+        data-cart-button
         class="fixed top-0 right-0 mr-4 mt-4 w-12 bg-blue-500 p-2 rounded-full text-white hover:bg-blue-700"
       >
         <svg
@@ -267,11 +228,39 @@
           />
         </svg>
         <div
+          data-cart-quantity
           class="bg-red-500 rounded-full text-xs absolute w-6 h-6 flex justify-center items-center right-0 bottom-0 transform translate-x-2 translate-y-2"
-        >
-          2
-        </div>
+        ></div>
       </button>
     </section>
+    <template id="store-item-template">
+      <div data-store-item class="lg:w-1/4 md:w-1/2 p-4 w-full">
+        <div class="block relative h-48 rounded overflow-hidden">
+          <img
+            data-image
+            class="object-cover object-center w-full h-full block"
+          />
+        </div>
+        <div class="mt-4 flex items-end justify-between">
+          <div>
+            <h3
+              data-category
+              class="text-gray-500 text-xs tracking-widest title-font uppercase mb-1"
+            ></h3>
+            <h2
+              data-name
+              class="text-gray-900 title-font text-lg font-medium"
+            ></h2>
+            <p data-price class="mt-1"></p>
+          </div>
+          <button
+            data-add-to-cart-button
+            class="text-white py-2 px-4 text-xl bg-blue-500 rounded hover:bg-blue-700"
+          >
+            Add To Cart
+          </button>
+        </div>
+      </div>
+    </template>
   </body>
 </html>
